@@ -66,14 +66,14 @@ public class GtnWsReportDataSelectionSqlGenerateServiceImpl implements GtnWsRepo
 
 	@Autowired
 	private GtnReportVariableDescriptionIndicatorService variableDescriptionIndicatorService;
-
+	
 	private static final GtnWSLogger GTNLOGGER = GtnWSLogger
 			.getGTNLogger(GtnWsReportDataSelectionSqlGenerateServiceImpl.class);
 
 	public GtnWsReportDataSelectionSqlGenerateServiceImpl() {
 		super();
 	}
-
+	
 	@Override
 	public void dataSelectionGenerateLogic(GtnUIFrameworkWebserviceRequest gtnWsRequest) {
 		GtnWsReportDataSelectionBean dataSelectionBean = gtnWsRequest.getGtnWsReportRequest().getReportBean()
@@ -138,7 +138,7 @@ public class GtnWsReportDataSelectionSqlGenerateServiceImpl implements GtnWsRepo
 
 	private List<GtnWsReportCustomCCPListDetails> customizeCustomCCP(List<Object[]> resultList,
 			Map<Integer, Integer> customViewDetails) {
-		List<GtnWsReportCustomCCPListDetails> ccpList = new ArrayList<>();
+		List<GtnWsReportCustomCCPListDetails> ccpList = new ArrayList<>(resultList.size());
 		for (Object[] result : resultList) {
 			GtnWsReportCustomCCPListDetails data = applicationContext.getBean(GtnWsReportCustomCCPListDetails.class);
 			data.setLevelNo(Integer.parseInt(result[3].toString()));
@@ -252,7 +252,7 @@ public class GtnWsReportDataSelectionSqlGenerateServiceImpl implements GtnWsRepo
 
 	public List<GtnWsRecordBean> getDashboardLeftData(GtnWsReportDashboardBean reportDashboardBean,
 			GtnUIFrameworkWebserviceRequest gtnWsRequest) {
-
+		
 		try {
 			GtnWsReportDataSelectionBean dataSelectionBean = gtnWsRequest.getGtnWsReportRequest()
 					.getDataSelectionBean();
@@ -266,6 +266,7 @@ public class GtnWsReportDataSelectionSqlGenerateServiceImpl implements GtnWsRepo
 					.getGtnWsReportCustomCCPListDetails();
 			Set<String> filteredHierarchy = Optional.ofNullable(reportDashboardBean.getFilteredHierarchy())
 					.orElseGet(HashSet::new);
+			
 			List<Object[]> customviewData = getCustomViewType(
 					gtnWsRequest.getGtnWsReportRequest().getGtnWsReportDashboardBean().getCustomViewMasterSid());
 			if (values == null) {
@@ -279,6 +280,7 @@ public class GtnWsReportDataSelectionSqlGenerateServiceImpl implements GtnWsRepo
 								customviewData))
 						.collect(Collectors.toList());
 			}
+			
 			int start = gtnWsRequest.getGtnWsSearchRequest().getTableRecordStart();
 			int limit = gtnWsRequest.getGtnWsSearchRequest().getTableRecordOffset();
 			int levelNo = Integer.parseInt(values.get(0).toString());
@@ -286,7 +288,8 @@ public class GtnWsReportDataSelectionSqlGenerateServiceImpl implements GtnWsRepo
 			return gtnWsReportCustomCCPListDetails.stream().filter(row -> row.getLevelNo() == levelNo
 					&& matchedFilteredHierarchyNo(filteredHierarchy, row.getHierarchyNo(), row.getData()[5].toString())
 					&& filterCustomViewVariable(customviewData, reportDashboardBean.getSelectedVariableType(), row)
-					&& row.getHierarchyNo().startsWith(hierarchyNo) && row.getRowIndex() >= start).limit(limit)
+					&& row.getHierarchyNo().startsWith(hierarchyNo) && row.getRowIndex() >= start)
+					.limit(limit)
 					.map(row -> aggregate(
 							convertToRecordbean(gtnWsRequest, row,
 									gtnWsRequest.getGtnWsSearchRequest().getRecordHeader(),
@@ -306,14 +309,26 @@ public class GtnWsReportDataSelectionSqlGenerateServiceImpl implements GtnWsRepo
 			List<Object[]> customviewData, GtnUIFrameworkWebserviceRequest gtnWsRequest) {
 		bean.getRecordHeader().stream().filter(e -> e != null && e.toString().contains("Total")).forEach(object -> {
 
-			Double total = bean.getRecordHeader().stream()
-					.filter(e -> e != null && e.toString().contains(object.toString().replace("Total", "")))
-					.mapToDouble(columns -> extractDouble(bean.getPropertyValue(columns.toString()))).sum();
+			Double total;
+			String levelName = "levelValue";
 			String indicator = hierachyBean.getData()[5].toString();
+			if (("V".equals(indicator)
+					&& bean.getStringProperty(levelName).contains(GtnWsQueryConstants.PERCENTAGE_OPERATOR))
+					|| object.toString().contains("PER") || object.toString().contains("RATE")) {
+				total = bean.getRecordHeader().stream()
+						.filter(e -> e != null && e.toString().contains(object.toString().replace("Total", "")))
+						.mapToDouble(columns -> extractDouble(bean.getPropertyValue(columns.toString()))).average()
+						.getAsDouble();
+			} else {
+				total = bean.getRecordHeader().stream()
+						.filter(e -> e != null && e.toString().contains(object.toString().replace("Total", "")))
+						.mapToDouble(columns -> extractDouble(bean.getPropertyValue(columns.toString()))).sum();
+			}
+			
 			String customViewTypeInBackend = String.valueOf(customviewData.get(0));
 			String[] customViewTypeDataArray = customViewTypeInBackend.split("~");
 			boolean isTotalSpecialCondition = !"V".equals(indicator) && !customViewTypeDataArray[2].equals("Columns");
-			String levelName = "levelValue";
+			
 			String currencyConversionType = gtnWsRequest.getGtnWsReportRequest().getGtnWsReportDashboardBean()
 					.getCurrencyConversion();
 			if (!"0".equals(currencyConversionType)) {
@@ -331,7 +346,7 @@ public class GtnWsReportDataSelectionSqlGenerateServiceImpl implements GtnWsRepo
 	private GtnWsRecordBean convertToRecordbean(GtnUIFrameworkWebserviceRequest gtnWsRequest,
 			GtnWsReportCustomCCPListDetails bean, List<Object> recordHeader, int index, Object[] displayFormat,
 			List<Object[]> customviewData) {
-
+		
 		String customViewTypeInBackend;
 		String[] customViewTypeDataArray;
 		Map<String, Double> dataForHierarchy = null;
@@ -363,7 +378,8 @@ public class GtnWsReportDataSelectionSqlGenerateServiceImpl implements GtnWsRepo
 		Optional<List> optionalRecordHeader = Optional.of(recordHeader);
 		List<Object> recordHeaderList = optionalRecordHeader.orElseGet(ArrayList::new);
 		recordBean.setRecordHeader(recordHeaderList);
-		recordBean.addAdditionalProperty(bean.getChildCount());// for Child Count
+		recordBean.addAdditionalProperty(bean.getChildCount());// for Child
+																// Count
 		recordBean.addAdditionalProperty(bean.getLevelNo());// level No
 		recordBean.addAdditionalProperty(bean.getHierarchyNo());
 		recordBean.addAdditionalProperty(index + 1);
@@ -433,9 +449,9 @@ public class GtnWsReportDataSelectionSqlGenerateServiceImpl implements GtnWsRepo
 			return data[6] + " - " + data[7];
 		}
 		if (String.valueOf(displayFormat[0]).equals("Name")) {
-			return data[6] == null ? data[1].toString() : data[6].toString();
-		} else {
 			return data[7] == null ? data[1].toString() : data[7].toString();
+		} else {
+			return data[6] == null ? data[1].toString() : data[6].toString();
 		}
 	}
 
@@ -475,7 +491,7 @@ public class GtnWsReportDataSelectionSqlGenerateServiceImpl implements GtnWsRepo
 					obj[0] = variableBreakdown.get(i).getMasterSid();
 					obj[1] = variableBreakdown.get(i).getPeriod();
 					obj[2] = variableBreakdown.get(i).getYear();
-					obj[3] = new Byte((byte) ((Integer) variableBreakdown.get(i).getSelectedVariable()).intValue());
+					obj[3] = Byte.valueOf((byte) ((Integer) variableBreakdown.get(i).getSelectedVariable()).intValue());
 					gtnSqlQueryEngine.executeInsertOrUpdateQuery(
 
 							replaceTableNames(GtnWsQueryConstants.VARIABLE_BREAKDOWN_SAVE_SERVICE_QUERY, tableMap), obj,
@@ -509,10 +525,27 @@ public class GtnWsReportDataSelectionSqlGenerateServiceImpl implements GtnWsRepo
 
 	@Override
 	public void regenerateTreeAndData(GtnUIFrameworkWebserviceRequest gtnWsRequest) {
+
+		GTNLOGGER.info(" Regenerating Custom view tables and Data ");
+		GtnWsReportDataSelectionBean dataSelectionBean = gtnWsRequest.getGtnWsReportRequest().getReportBean()
+				.getDataSelectionBean();
+
+		resetToNewDatasetInReportDashboard(dataSelectionBean);
+		GTNLOGGER.info(" Ending regeneration of Custom view tables and Data ");
+	}
+
+	public void regenerateChangedCustomViewTreeAndData(GtnUIFrameworkWebserviceRequest gtnWsRequest) {
+
+		GTNLOGGER.info(" Regenerating Custom view tables and Data after dataset is chabged in custom view");
+		GtnWsReportDataSelectionBean dataSelectionBean = gtnWsRequest.getGtnWsReportRequest()
+				.getDataSelectionBean();
+
+		resetToNewDatasetInReportDashboard(dataSelectionBean);
+		GTNLOGGER.info(" Ending regeneration of Custom view tables and Data after dataset is chabged in custom view");
+	}
+
+	private void resetToNewDatasetInReportDashboard(GtnWsReportDataSelectionBean dataSelectionBean) {
 		try {
-			GTNLOGGER.info(" Regenerating Custom view tables and Data ");
-			GtnWsReportDataSelectionBean dataSelectionBean = gtnWsRequest.getGtnWsReportRequest().getReportBean()
-					.getDataSelectionBean();
 			if (dataSelectionBean.getCustomViewMasterSid() != 0) {
 				truncateTables(Arrays
 						.asList(dataSelectionBean.getSessionTable(GtnWsQueryConstants.CUSTOM_VARIABLE_HIERARCHY)));
@@ -524,7 +557,7 @@ public class GtnWsReportDataSelectionSqlGenerateServiceImpl implements GtnWsRepo
 		} catch (GtnFrameworkGeneralException | IOException ex) {
 			GTNLOGGER.error(ex.getMessage(), ex);
 		}
-		GTNLOGGER.info("Ending regeneration of Custom view tables and Data ");
+
 	}
 
 	private void truncateTables(List<String> tableNameList) {
@@ -598,19 +631,24 @@ public class GtnWsReportDataSelectionSqlGenerateServiceImpl implements GtnWsRepo
 
 	}
 
-	// Method to format values to non-decimal if user has selected Currency Display
+	// Method to format values to non-decimal if user has selected Currency
+	// Display
 	// = No Conversion
 	private void currencyTypeNoConversionDataConverters(GtnWsRecordBean gtnWsRecordBean, String mapKey,
 			Double dataValue, String variableIndicator, String levelName, boolean isTotalSpecialCondition) {
-		if (("V".equals(variableIndicator) && levelName.contains(GtnWsQueryConstants.PERCENTAGE_OPERATOR))
-				|| mapKey.contains("PER") || mapKey.contains("RATE")) {
+		if (("V".equals(variableIndicator) || levelName.contains(GtnWsQueryConstants.PERCENTAGE_OPERATOR))
+				|| mapKey.contains("PER") || mapKey.contains("RATE") || mapKey.contains("WEIGHTED")) {
+			
 			gtnWsRecordBean.addProperties(mapKey, GtnWsReportDecimalFormat.PERCENT.getFormattedValue(dataValue)
 					+ GtnWsQueryConstants.PERCENTAGE_OPERATOR);
 		} else if (("V".equals(variableIndicator) && levelName.contains("Unit")) || mapKey.contains("UNIT")
 				|| isTotalSpecialCondition) {
-			gtnWsRecordBean.addProperties(mapKey,
-					GtnWsReportDecimalFormat.UNITS_NO_CONVERSION.getFormattedValue(dataValue));
-		} else {
+			
+				gtnWsRecordBean.addProperties(mapKey,
+						GtnWsReportDecimalFormat.UNITS_NO_CONVERSION.getFormattedValue(dataValue));
+
+		}
+		else {
 			gtnWsRecordBean.addProperties(mapKey,
 					GtnWsReportDecimalFormat.DOLLAR_NO_CONVERSION.getFormattedValue(dataValue));
 		}
@@ -618,8 +656,7 @@ public class GtnWsReportDataSelectionSqlGenerateServiceImpl implements GtnWsRepo
 
 	public static Double extractDouble(Object value) {
 		return Optional.ofNullable(value).isPresent()
-				? Double.parseDouble(String.valueOf(value).replaceAll("[^0-9,//.,-]|[,]", ""))
-				: 0.0;
+				? Double.parseDouble(String.valueOf(value).replaceAll("[^0-9,//.,-]|[,]", "")) : 0.0;
 	}
 
 	private boolean matchedFilteredHierarchyNo(Set<String> filteredHierarchyNo, String hierarchyNoFromFile,
